# CPDOT

./: README.md
formation_planner/: CMakeLists.txt  LICENSE  README.md  lp_plugin.xml  package.xml
formation_planner/CTopPRM/: main
formation_planner/CTopPRM/Mk/: libs_flags.mk
formation_planner/CTopPRM/blender/: columns_2.py
formation_planner/CTopPRM/prints/: roadmap_clustering_roadmap_shortened_unique_path0_0.csv  roadmap_clustering_roadmap_shortened_unique_path0_1.csv
formation_planner/CTopPRM/src/: main.cpp
formation_planner/config/: demo.rviz  test-stage.rviz  test.rviz
formation_planner/config/move_base/: liom_planner.yaml
formation_planner/gazebo/worlds/: icra_world.world
formation_planner/include/formation_planner/: IdentifyHomotopy.h  coarse_path_planner.h  environment.h  formation_planner.h  formation_planner_ros.h  forward_kinematics.h  lightweight_nlp_problem.h  optimizer_interface.h  planner_config.h  topo_prm.h  vehicle_model.h  yaml_all.h
formation_planner/launch/: animation.launch  demo_fk_test.launch  demo_test.launch  flexble_formation.launch  generate_decomp.launch  test_decomp.launch  test_iris.launch  topo_test.launch  topological_test.launch  write_obs_to_world.launch
formation_planner/lib_iris/: CMakeLists.txt
formation_planner/lib_iris/src/: iris_demo.cpp
formation_planner/src/: yaml.cpp
formation_planner/traj_result/: obs_height.yaml  obs_height_30.yaml  obs_height_40.yaml  obs_height_60.yaml  obs_height_70.yaml  obstacle.yaml  obstacle_30.yaml  obstacle_40.yaml  obstacle_60.yaml  obstacle_70.yaml
(+107 files in other folders)
